Publish documentation to GitHub Pages

--- a/dokkoo/index.html
+++ b/dokkoo/index.html
@@ -5,7 +5,7 @@
 <table><tr class="module-item"><td><a class="struct" href="struct.Date.html" title="dokkoo::Date struct">Date</a></td><td class="docblock-short"><p>A File’s date-time metadata</p>
 </td></tr><tr class="module-item"><td><a class="struct" href="struct.Page.html" title="dokkoo::Page struct">Page</a></td><td class="docblock-short"><p>Generated data regarding a Mokk File</p>
 </td></tr></table><h2 id="functions" class="section-header"><a href="#functions">Functions</a></h2>
-<table><tr class="module-item"><td><a class="fn" href="fn.compile.html" title="dokkoo::compile fn">compile</a></td><td class="docblock-short"><p>Compiles a Mokk File; renders, makes note of the File (when, or if, the need arises), returns compiled HTML</p>
+<table><tr class="module-item"><td><a class="fn" href="fn.compile.html" title="dokkoo::compile fn">compile</a></td><td class="docblock-short"><p>Compiles a Mokk File; renders, makes note of the File (when, or if, the need arises)</p>
 </td></tr><tr class="module-item"><td><a class="fn" href="fn.create_liquid_parser.html" title="dokkoo::create_liquid_parser fn">create_liquid_parser</a></td><td class="docblock-short"><p>Creates a Liquid parser</p>
 </td></tr><tr class="module-item"><td><a class="fn" href="fn.get_contexts.html" title="dokkoo::get_contexts fn">get_contexts</a></td><td class="docblock-short"><p>Returns a Liquid object with a Page’s Liquid contexts</p>
 </td></tr><tr class="module-item"><td><a class="fn" href="fn.get_page_object.html" title="dokkoo::get_page_object fn">get_page_object</a></td><td class="docblock-short"><p>Returns an object with a Page’s context</p>
