--- a/dokkoo/fn.get_permalink.html
+++ b/dokkoo/fn.get_permalink.html
@@ -7,11 +7,11 @@
         </a><div class="sidebar-elems"><h2 class="location"><a href="index.html">In dokkoo</a></h2><div id="sidebar-vars" data-name="get_permalink" data-ty="fn" data-relpath=""></div><script defer src="sidebar-items.js"></script></div></nav><main><div class="width-limiter"><div class="sub-container"><a class="sub-logo-container" href="../dokkoo/index.html">
                         <img src="https://github.com/Dirout/dokkoo/raw/master/branding/icon.png" alt="logo"></a><nav class="sub"><div class="theme-picker hidden"><button id="theme-picker" aria-label="Pick another theme!" aria-haspopup="menu" title="themes"><img width="22" height="22" alt="Pick another theme!" src="../brush.svg"></button><div id="theme-choices" role="menu"></div></div><form class="search-form"><div class="search-container"><span></span><input class="search-input" name="search" autocomplete="off" spellcheck="false" placeholder="Click or press ‘S’ to search, ‘?’ for more options…" type="search"><button type="button" id="help-button" title="help">?</button><a id="settings-menu" href="../settings.html" title="settings"><img width="22" height="22" alt="Change settings" src="../wheel.svg"></a></div></form></nav></div><section id="main-content" class="content"><div class="main-heading">
     <h1 class="fqn"><span class="in-band">Function <a href="index.html">dokkoo</a>::<wbr><a class="fn" href="#">get_permalink</a><button id="copy-path" onclick="copy_path(this)" title="Copy item path to clipboard"><img src="../clipboard.svg" width="19" height="18" alt="Copy item path"></button></span></h1><span class="out-of-band"><a class="srclink" href="../src/dokkoo/lib.rs.html#172-194">source</a> · <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">[<span class="inner">&#x2212;</span>]</a></span></div><div class="docblock item-decl"><pre class="rust fn"><code>pub fn get_permalink(permalink: &amp;<a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.str.html">str</a>) -&gt; <a class="struct" href="https://doc.rust-lang.org/nightly/alloc/string/struct.String.html" title="struct alloc::string::String">String</a></code></pre></div><details class="rustdoc-toggle top-doc" open><summary class="hideme"><span>Expand description</span></summary><div class="docblock"><p>Returns an expanded permalink value, for when shorthand is used</p>
-<h2 id="arguments" class="section-header"><a href="#arguments">Arguments</a></h2>
+<h2 id="arguments"><a href="#arguments">Arguments</a></h2>
 <ul>
 <li><code>permalink</code> - A string slice that represents the permalink value specified in the File</li>
 </ul>
-<h2 id="shorthand" class="section-header"><a href="#shorthand">Shorthand</a></h2>
+<h2 id="shorthand"><a href="#shorthand">Shorthand</a></h2>
 <ul>
 <li>
 <p><code>date</code> → <code>/{{ page.data.collection }}/{{ page.date.year }}/{{ page.date.month }}/{{ page.date.day }}/{{ page.data.title }}.html</code></p>
@@ -29,5 +29,5 @@
 <p><code>none</code> → <code>/{{ page.data.collection }}/{{ page.data.title }}.html</code></p>
 </li>
 </ul>
-</div></details></section><section id="search" class="content hidden"></section></div></main><div id="rustdoc-vars" data-root-path="../" data-current-crate="dokkoo" data-themes="ayu,dark,light" data-resource-suffix="" data-rustdoc-version="1.60.0-nightly (734368a20 2022-02-07)" ></div>
+</div></details></section><section id="search" class="content hidden"></section></div></main><div id="rustdoc-vars" data-root-path="../" data-current-crate="dokkoo" data-themes="ayu,dark,light" data-resource-suffix="" data-rustdoc-version="1.60.0-nightly (c5c610aad 2022-02-14)" ></div>
 </body></html>
